--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 
 /* Header Section */
 header {
-  background-color: #111;
+  background-color: blue;
   color: white;
   text-align: center;
   padding: 40px 20px;
@@ -112,7 +112,7 @@ section {
 section h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #111;
+  color:blueviolet;
 }
 
 section p {
@@ -137,7 +137,7 @@ section p {
 .card h3 {
   font-size: 1.3rem;
   margin-bottom: 10px;
-  color: #222;
+  color: blue;
 }
 
 .card p {
